--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <title>大大的SB</title>
-    <meta charset="utf-8"/>
-	<script type="text/javascript">
-	alert("有空再搞");
-	</script>
+ 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+<title>测试中</title>
+
+
+
+
+
+
 </head>
-<body >
+<body>
+<h1>你好，世界！</h1>
+
+ <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+ <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
