--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <h1>你好，世界！</h1>
 
  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
- <script src="js/bootstrap.min.js"></script>
+ <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
