--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 
 </head>
 <body>
-<h1>你好，世界！</h1>
+<div  style="width:5%">
+    <ul class="nav nav-pills nav-stacked">
+      <li role="presentation" class="active"><a href="#">Home</a></li>
+      <li role="presentation"><a href="#">Profile</a></li>
+      <li role="presentation"><a href="#">Messages</a></li>
+    </ul>
+
+
+</div>
 
  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
  <script src="bootstrap/js/bootstrap.min.js"></script>
