修改部分样式

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>个人博客</title>
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="bootstrap/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bootstrap/font-awesome.min.css">
 
     <link rel="stylesheet" href="dist/metisMenu.css" />
     <link rel="stylesheet" href="dist/demo.css">
@@ -139,7 +139,7 @@
 	 <!--右部 显示内容 开始-->
      <div class="col-md-7" id="NR">
      
-       <div  style="padding-top: 10px;padding-bottom: 10px;" class="jumbotron">
+       <div  style="padding-top: 10px;padding-bottom: 10px;background-color: #fcf8e3;" class="jumbotron">
           <h3>测试文章</h3>
           <span>测试文章，测试文章</span>
        </div>
